# eppy

./: .commitLog  .commitTmplt  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  2to3sh.sh  CHANGES.txt  CONTRIBUTE.md  CONTRIBUTING.rst  EPlusProject.tmproj  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README.txt  a.idf  appveyor.yml  badfile.idf  cleanup.py  eplus_enhancements.txt  eppy.sublime-project  eppy.sublime-workspace  flake8.sh  frog.py  git_notes.txt  goodfile.idf  i433.py  install_conda.sh  integration.sh  license  main.py  master.yml  newfunctions.txt  no_comm.txt  openfile.py  other.yml  p3.txt  pyproject.toml  (+29 more)
EEP!/: EEP!001_logging.md
EPlusInputcode/: cleancopy.py  cleannames.py  notes.txt  temp1.py  zonenames.py
EPlusWebSite/: EPlusWebSite.tmproj  manage.py  runningnotes.txt  settings.py  urls.py
delete_oldworkflows/: install.sh
diagrams/: 07_oneStorey_Radiant_d4.sh  a.dot  a.idf  a_grafflenotes.txt  cleannames.py  diagram.py  eplus_functions.py  iddV6_0.py  idd_fields.py  idfdiagram.py  interface_notes.txt  loops.py  makeloop.py  makeplantloop.py  notes_diagram.txt  read_idd_idf_tests.py  readme_diagram.txt  running_notes.txt  s_adu2uncontr.py  s_adu2uncontr1.py  s_airloop.py  s_airloop1.py  s_airloop2.py  s_airloop3.py  s_airplantloop.py  s_airplantloop1.py  s_airplantloop2.py  s_airplantloop3.py  s_airplantloop4.py  s_branchdiagrams.py  s_cleanfile.py  s_entireplantloop.py  s_entireplantloop1.py  s_plantloop.py  s_plantloop1.py  s_plantloop2.py  s_plantloop4.py  s_plantloop5.py  s_rename_name.py  scratch.py  (+14 more)
docs/: 2to3sh.sh  (+49 more)
(+1272 files in other folders)
